--- a/plugin.yml
+++ b/plugin.yml
@@ -2,3 +2,10 @@ name: ItemCommandsPlus
 main: item.commands.plus.ItemCommandPlus
 version: 1.2.0
 author: amata1219(Twitter-@amata1219)
+
+commands:
+  ic+:
+    description: It's main commands of this plugin.
+    usage: /<command>
+    permisson: item.commands.plus.icplus
+    permissio-message: Yon don't have permission "<permission>"
