--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,2 @@
-DefaultCooldownMessage: §4クールダウン中です(後[cooldown]tick)！
-EnableLogging: true
+DefaultCooldownMessage: §4クールダウン中です(後[cooldown:s]秒)！
+EnableLogging: false
