--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: ItemCommandsPlus
-main: item.commands.plus.ItemCommandPlus
+main: item.commands.plus.ItemCommandsPlus
 version: 1.2.0
 author: amata1219(Twitter-@amata1219)
 
