--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: ItemCommandsPlus
-main: item.commands.plus.ItemCommandsPlus
+main: com.github.amata1219.item.commands.plus.ItemCommandsPlus
 version: 2.0.1
 author: '@amata1219'
 commands:
